...
            children: [
              Row(
                mainAxisSize: MainAxisSize.max,
                mainAxisAlignment: MainAxisAlignment.spaceBetween,
                children: [
                  Text(
                    'Create Post',
                    style: FlutterFlowTheme.of(context).headlineSmall.override(
                          font: GoogleFonts.interTight(
                            fontWeight: FlutterFlowTheme.of(context)
                                .headlineSmall
                                .fontWeight,
                            fontStyle: FlutterFlowTheme.of(context)
...
                                  .fontStyle,
                            ),
                      ),
                      FlutterFlowDropDown<String>(
                        controller: _model.postToValueController ??=
                            FormFieldController<String>(null),
                        options: ['Global', 'Classes', 'Club'],
                        onChanged: (val) =>
                            safeSetState(() => _model.postToValue = val),
                        width: 131.59,
                        height: 40.0,
                        textStyle:
                            FlutterFlowTheme.of(context).bodyMedium.override(
...
