...
        backgroundColor: Color(0xFFFAFAFA),
        floatingActionButton: Visibility(
          visible: FFAppState().currentPage == 'Feed',
          child: Padding(
            padding: EdgeInsetsDirectional.fromSTEB(0.0, 0.0, 0.0, 150.0),
            child: FloatingActionButton(
              key: ValueKey('FloatingActionButton_6lwz'),
              onPressed: () async {
                await showModalBottomSheet(
                  isScrollControlled: true,
                  backgroundColor: Colors.transparent,
                  enableDrag: false,
                  context: context,
...
